unpackaged/main/default/objects/Partnership__c/Partnership__c.object-meta.xml
<CustomObject>
    <label>Partnership</label>
    <nameField>
        <label>Partnership Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partnerships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>