unpackaged/main/default/objects/Partnership__c/fields/Acronym__c.field-meta.xml
<CustomField>
    <fullName>Acronym__c</fullName>
    <description>Short reference for the partnership</description>
    <inlineHelpText>Short reference for the partnership</inlineHelpText>
    <label>Acronym</label>
    <length>30</length>
    <type>Text</type>
</CustomField>