unpackaged/main/default/objects/Partnership__c/fields/Affiliate__c.field-meta.xml
<CustomField>
    <fullName>Affiliate__c</fullName>
    <description>Affiliate named in section 1.1(a) of T&amp;C's</description>
    <inlineHelpText>Affiliate named in section 1.1(a) of T&amp;C's</inlineHelpText>
    <label>Affiliate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>