unpackaged/main/default/objects/Partnership__c/fields/Legal_Name_Long__c.field-meta.xml
<CustomField>
    <fullName>Legal_Name_Long__c</fullName>
    <label>Legal Name Long</label>
    <length>255</length>
    <type>Text</type>
</CustomField>