unpackaged/main/default/objects/Partnership__c/fields/Logo__c.field-meta.xml
<CustomField>
    <fullName>Logo__c</fullName>
    <description>Visible Logo for this partnership</description>
    <formula>IF( Logo_URL__c ="", null, IMAGE( Logo_URL__c ,Name, -200,200))</formula>
    <inlineHelpText>Visible Logo for this partnership</inlineHelpText>
    <label>Logo</label>
    <type>Text</type>
</CustomField>