unpackaged/main/default/objects/Partnership__c/fields/Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>Logo_URL__c</fullName>
    <description>URL for the Logo used by this partnership</description>
    <inlineHelpText>URL for the Logo used by this partnership</inlineHelpText>
    <label>Logo URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>