unpackaged/main/default/objects/Partnership__c/fields/Partnership_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Expiry__c</fullName>
    <label>Partnership Expiry</label>
    <type>Date</type>
</CustomField>