unpackaged/main/default/objects/Partnership__c/fields/Template_Group__c.field-meta.xml
<CustomField>
    <fullName>Template_Group__c</fullName>
    <description>Used to filter Conga Template Group name to only show templates in this group</description>
    <inlineHelpText>Used to filter Conga Template Group name to only show templates in this group</inlineHelpText>
    <label>Conga Template Group</label>
    <length>4</length>
    <type>Text</type>
</CustomField>