unpackaged/main/default/objects/Partnership__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Indigenous</fullName>
                <default>true</default>
                <label>Indigenous</label>
            </value>
            <value>
                <fullName>Revenue Share</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>