unpackaged/main/default/objects/Partnership__c/listViews/Active_with_Logo.listView-meta.xml
<ListView>
    <fullName>Active_with_Logo</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>Description__c</columns>
    <columns>Legal_Name__c</columns>
    <columns>Acronym__c</columns>
    <columns>Template_Group__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active</label>
</ListView>