unpackaged/main/default/objects/Partnership__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>Description__c</columns>
    <columns>Legal_Name__c</columns>
    <columns>Acronym__c</columns>
    <columns>Template_Group__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>